alignment fix

--- a/src/styles/_notebooks.scss
+++ b/src/styles/_notebooks.scss
@@ -1,4 +1,4 @@
-#projects {
+#notebooks {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -10,7 +10,7 @@
   }
 }
 
-.user-projects {
+.user-notebooks {
   margin: 20px auto;
   img {
     max-width: 100%;
